[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/resources/camera_shake_noise.tres" type="OpenSimplexNoise" id=1]
[ext_resource path="res://assets/theme/gravity_theme.tres" type="Theme" id=2]
[ext_resource path="res://game/camera/Camera.gd" type="Script" id=3]
[ext_resource path="res://game/camera/CameraTestUI.gd" type="Script" id=4]

[sub_resource type="NoiseTexture" id=779]
width = 80
height = 80
noise = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=780]
extents = Vector2( 256, 116 )

[sub_resource type="StyleBoxFlat" id=781]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Camera" type="Camera2D"]
position = Vector2( 320, 180 )
rotation = 3.14159
z_index = 5
rotating = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 3 )

[node name="TestUI" type="CanvasLayer" parent="."]
layer = 3
script = ExtResource( 4 )
noise = ExtResource( 1 )

[node name="TestToggle" type="CheckBox" parent="TestUI"]
margin_left = 6.0
margin_top = 24.0
margin_right = 59.0
margin_bottom = 48.0
theme = ExtResource( 2 )
text = "test"

[node name="TestHud" type="Node2D" parent="TestUI"]

[node name="AddTraumaBtn" type="Button" parent="TestUI/TestHud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 164.0
margin_right = 37.0
margin_bottom = 177.0
theme = ExtResource( 2 )
text = "tresi"

[node name="ResetViewBtn" type="Button" parent="TestUI/TestHud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 26.0
margin_right = 176.0
margin_bottom = 46.0
theme = ExtResource( 2 )
text = "resetiraj pogled"

[node name="ShakeBar" type="ProgressBar" parent="TestUI/TestHud"]
modulate = Color( 1, 0, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 338.0
margin_right = 610.0
margin_bottom = 352.0
theme = ExtResource( 2 )
max_value = 1.0

[node name="TraumaBar" type="ProgressBar" parent="TestUI/TestHud"]
modulate = Color( 0.12549, 1, 0, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_top = 322.0
margin_right = 611.0
margin_bottom = 336.0
theme = ExtResource( 2 )
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomSlider" type="VSlider" parent="TestUI/TestHud"]
visible = false
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 57.0
margin_right = 19.0
margin_bottom = 312.0
theme = ExtResource( 2 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="TimeSlider" type="VSlider" parent="TestUI/TestHud"]
anchor_bottom = 1.0
margin_left = 635.0
margin_top = 6.0
margin_right = 651.0
margin_bottom = 352.0
rect_scale = Vector2( -1, 1 )
theme = ExtResource( 2 )
max_value = 2.0
step = 0.1
value = 1.0

[node name="NoiseControl" type="Control" parent="TestUI/TestHud"]
margin_left = 1.0
margin_top = 172.0
margin_right = 95.0
margin_bottom = 356.0
theme = ExtResource( 2 )

[node name="NoiseVisual" type="TextureRect" parent="TestUI/TestHud/NoiseControl"]
margin_left = 7.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 93.0
theme = ExtResource( 2 )
texture = SubResource( 779 )

[node name="Seed" type="HSlider" parent="TestUI/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 99.0
margin_right = 87.0
margin_bottom = 115.0
hint_tooltip = "Seed"
theme = ExtResource( 2 )

[node name="Octaves" type="HSlider" parent="TestUI/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 114.0
margin_right = 87.0
margin_bottom = 130.0
hint_tooltip = "Octaves"
theme = ExtResource( 2 )
min_value = 1.0
max_value = 9.0
value = 3.0

[node name="Period" type="HSlider" parent="TestUI/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 131.0
margin_right = 87.0
margin_bottom = 147.0
hint_tooltip = "Period"
theme = ExtResource( 2 )
min_value = 0.1
max_value = 256.0
step = 0.1
value = 64.0

[node name="Persistence" type="HSlider" parent="TestUI/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 148.0
margin_right = 87.0
margin_bottom = 164.0
hint_tooltip = "Persistance"
theme = ExtResource( 2 )
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5

[node name="Lacunarity" type="HSlider" parent="TestUI/TestHud/NoiseControl"]
margin_left = 8.0
margin_top = 165.0
margin_right = 87.0
margin_bottom = 181.0
hint_tooltip = "Lacunarity"
theme = ExtResource( 2 )
min_value = 0.01
max_value = 4.0
step = 0.01
value = 2.0

[node name="ShakeToggle" type="CheckBox" parent="TestUI/TestHud"]
margin_left = 4.0
margin_top = 128.0
margin_right = 57.0
margin_bottom = 152.0
theme = ExtResource( 2 )
text = "in gejm"

[node name="ScreenArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenArea"]
position = Vector2( -9.15527e-05, -0.000350952 )
shape = SubResource( 780 )

[node name="Panel" type="Panel" parent="ScreenArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -257.0
margin_top = -115.0
margin_right = 257.0
margin_bottom = 115.0
custom_styles/panel = SubResource( 781 )

[connection signal="mouse_entered" from="TestUI/TestToggle" to="TestUI" method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestToggle" to="TestUI" method="_on_CheckBox_mouse_exited"]
[connection signal="toggled" from="TestUI/TestToggle" to="TestUI" method="_on_CheckBox_toggled"]
[connection signal="mouse_entered" from="TestUI/TestHud/AddTraumaBtn" to="TestUI" method="_on_AddTraumaBtn_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/AddTraumaBtn" to="TestUI" method="_on_AddTraumaBtn_mouse_exited"]
[connection signal="pressed" from="TestUI/TestHud/AddTraumaBtn" to="TestUI" method="_on_AddTraumaBtn_pressed"]
[connection signal="mouse_entered" from="TestUI/TestHud/ResetViewBtn" to="TestUI" method="_on_ResetView_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/ResetViewBtn" to="TestUI" method="_on_ResetView_mouse_exited"]
[connection signal="pressed" from="TestUI/TestHud/ResetViewBtn" to="TestUI" method="_on_ResetView_pressed"]
[connection signal="mouse_entered" from="TestUI/TestHud/ZoomSlider" to="TestUI" method="_on_ZoomSlider_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/ZoomSlider" to="TestUI" method="_on_ZoomSlider_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/ZoomSlider" to="TestUI" method="_on_ZoomSlider_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/TimeSlider" to="TestUI" method="_on_TimeSlider_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/TimeSlider" to="TestUI" method="_on_TimeSlider_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/TimeSlider" to="TestUI" method="_on_TimeSlider_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl" to="TestUI" method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl" to="TestUI" method="_on_Control_mouse_exited"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl/Seed" to="TestUI" method="_on_SeedSlider_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl/Seed" to="TestUI" method="_on_SeedSlider_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/NoiseControl/Seed" to="TestUI" method="_on_Seed_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl/Octaves" to="TestUI" method="_on_Octaves_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl/Octaves" to="TestUI" method="_on_Octaves_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/NoiseControl/Octaves" to="TestUI" method="_on_Octaves_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl/Period" to="TestUI" method="_on_Period_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl/Period" to="TestUI" method="_on_Period_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/NoiseControl/Period" to="TestUI" method="_on_Period_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl/Persistence" to="TestUI" method="_on_Persistance_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl/Persistence" to="TestUI" method="_on_Persistance_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/NoiseControl/Persistence" to="TestUI" method="_on_Persistence_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/NoiseControl/Lacunarity" to="TestUI" method="_on_Lacunarity_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/NoiseControl/Lacunarity" to="TestUI" method="_on_Lacunarity_mouse_exited"]
[connection signal="value_changed" from="TestUI/TestHud/NoiseControl/Lacunarity" to="TestUI" method="_on_Lacunarity_value_changed"]
[connection signal="mouse_entered" from="TestUI/TestHud/ShakeToggle" to="TestUI" method="_on_CheckBox_mouse_entered"]
[connection signal="mouse_exited" from="TestUI/TestHud/ShakeToggle" to="TestUI" method="_on_CheckBox_mouse_exited"]
[connection signal="toggled" from="TestUI/TestHud/ShakeToggle" to="TestUI" method="_on_ShakeToggle_toggled"]
[connection signal="body_entered" from="ScreenArea" to="." method="_on_ScreenArea_body_entered"]
[connection signal="body_exited" from="ScreenArea" to="." method="_on_ScreenArea_body_exited"]
